name:                MyYi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/MyYi#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable yi
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base -any
                     , yi-core -any
                     , yi-misc-modes
                     , yi-mode-haskell
                     , yi-mode-javascript
                     , yi-rope
                     , yi-keymap-vim
                     , yi-frontend-vty
                     , microlens-platform
                     , mtl
                     , optparse-applicative
  default-language:    Haskell2010
